--- a/html/options.html
+++ b/html/options.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Loading...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="../js/ui.js"></script>
   <script src="../js/event.js"></script>
   <script src="../js/base64.js"></script>
@@ -239,7 +240,7 @@
       <div class="setdes" data-i18n="des_sync1"></div>
     </div>
   </div>
-  <div id="set-mgsmgr" class="set set-20" data-confobj="mges|settings">
+  <div id="set-mgsmgr-1" class="set set-20" data-confobj="mges|settings">
     <div class="setname" data-i18n="stnm_settings"></div>
     <div class="setcontent">
       <label data-i18n="con_mgesmode"></label><br/>
@@ -264,7 +265,7 @@
     <div class="setname" data-i18n="ui"></div>
     <div class="setcontent" data-confobj="mges|ui"></div>
   </div>
-  <div id="set-mgsmgr" class="set set-22 confobj" data-confobj="mges|actions">
+  <div id="set-mgsmgr-2" class="set set-22 confobj" data-confobj="mges|actions">
     <div class="setname" data-i18n="stnm_action"></div>
     <div class="setcontent">
       <ul class="con-item ul_mges"></ul>
@@ -311,19 +312,19 @@
       <input class="init change-checkbox" data-confele="img" type="checkbox"><label data-i18n="con_enableimg"></label>
     </div>
   </div>
-  <div id="set-drgtxt" data-confobj="sdrg|tsdrg" class="set set-31">
+  <div id="set-drgtxt-1" data-confobj="sdrg|tsdrg" class="set set-31">
     <div class="setname" data-i18n="stnm_action"></div>
     <div class="setcontent">
       <ul class="con-item ul_tsdrg"></ul>
     </div>
   </div>
-  <div id="set-drgtxt" data-confobj="sdrg|lsdrg" class="set set-32">
+  <div id="set-drgtxt-2" data-confobj="sdrg|lsdrg" class="set set-32">
     <div class="setname" data-i18n="stnm_action"></div>
     <div class="setcontent">
       <ul class="con-item ul_lsdrg"></ul>
     </div>
   </div>
-  <div id="set-drgtxt" data-confobj="sdrg|isdrg" class="set set-33">
+  <div id="set-drgtxt-3" data-confobj="sdrg|isdrg" class="set set-33">
     <div class="setname" data-i18n="stnm_action"></div>
     <div class="setcontent">
       <ul class="con-item ul_isdrg"></ul>
@@ -373,7 +374,7 @@
     <div class="setname" data-i18n="ui"></div>
     <div class="setcontent" data-confobj="drg|ui"></div>
   </div>
-  <div id="set-drgtxt" data-confobj="drg|tdrg" class="set set-42 confobj">
+  <div id="set-drgtxt-4" data-confobj="drg|tdrg" class="set set-42 confobj">
     <div class="setname" data-i18n="stnm_action"></div>
     <div class="setcontent">
       <ul class="con-item ul_tdrg"></ul>
