--- a/html/options.html
+++ b/html/options.html
@@ -620,27 +620,7 @@
   <div class="set set-133 confobj" data-confobj="">
     <div class="setname" data-i18n="translate"></div>
     <div class="setcontent">
-      Want this extension to show in your native language? If you are familiar with English, you can help us
-      translate this extension into your native language. Please contact us by email: crexme@gmail.com .<br/>
-      The <a target="_blank" href="https://translate.google.com/toolkit">Google translator toolkit</a> can
-      help you complete your translation quickly. For more informations
-      <a target="_blank" href="https://developer.chrome.com/extensions/i18n">https://developer.chrome.com/extensions/i18n</a><br/>
-      <table class="tab_translate">
-        <tbody>
-        <tr class="tr_title">
-          <td>Language</td>
-          <td>Translator</td>
-          <td>Language</td>
-          <td>Translator</td>
-        </tr>
-        <tr class="tr_a">
-          <td>中文 (繁體)</td>
-          <td><a href="http://ilowkey.net/" target="_blank">KM Zeng</a></td>
-          <td style="border-left:1px solid #ccf;">Русский</td>
-          <td><a href="https://ok.ru/kamyshnikov.andrey" target="_blank">Камышников Андрей</a></td>
-        </tr>
-        </tbody>
-      </table>
+      nothing
     </div>
   </div>
   <div class="set set-134 confobj" data-confobj="">
@@ -654,10 +634,8 @@
       <ul class="thanks_ul">
         <li>
           <div data-i18n="tks_pjt"></div>
+          <div class="thanks_name"><a target="_blank" href="https://github.com/zimocode/smartup">zimocode/smartup</a></div>
           <div class="thanks_name"><a target="_blank" href="https://github.com/dankogai/js-base64">js-base64</a></div>
-          <div class="thanks_name"><a target="_blank"
-                                      href="https://chrome.google.com/webstore/detail/pgphcomnlaojlmmcjmiddhdapjpbgeoc">Send
-            from Gmail (by Google)</a></div>
           <div class="thanks_name"><a target="_blank" href="https://github.com/davidshimjs/qrcodejs">qrcodejs</a>
           </div>
         </li>
